<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_activity"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        style="@style/TextAppearance.MaterialComponents.Headline2"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="text"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_salary"
            android:inputType="number"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/designation"
            android:inputType="text"
            android:layout_marginTop="10dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:inputType="text"
            android:layout_marginTop="10dp"/>
<!--            android:focusable="false"-->
<!--            android:onClick="onClick"-->

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:inputType="text"
            android:layout_marginTop="10dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/registration"
        android:onClick="onClick"
        style="@style/Widget.AppCompat.Button.Colored"/>

</androidx.appcompat.widget.LinearLayoutCompat>