<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        style="@style/TextAppearance.MaterialComponents.Headline2"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_name"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@+id/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/_name"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_salary"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@+id/salary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/_name"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_salary"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/_salary"
                app:layout_constraintTop_toBottomOf="@id/_name"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/_designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designation"
                android:inputType="text"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toStartOf="@id/designation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/_salary"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designation"
                android:inputType="text"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/_designation"
                app:layout_constraintTop_toBottomOf="@id/_salary"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:inputType="text"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toStartOf="@id/date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/_designation"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:inputType="text"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/_date"
                app:layout_constraintTop_toBottomOf="@id/_designation"/>
            <!--            android:focusable="false"-->
            <!--            android:onClick="onClick"-->

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:inputType="text"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toStartOf="@id/mobile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/_date"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:inputType="text"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/_mobile"
                app:layout_constraintTop_toBottomOf="@id/_date"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list"
        android:text="@string/see_list"
        android:onClick="onClick"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userList"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        style="@style/TextAppearance.MaterialComponents.Headline2"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/adapter_user_list"
        tools:itemCount="3"/>

</androidx.appcompat.widget.LinearLayoutCompat>